public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/1972/source/compile
source.c: In function ‘main’:
source.c:6:16: error: expected ‘;’ before ‘)’ token
     for (N<=100)
                ^
source.c:6:16: error: expected expression before ‘)’ token
